Complete preprocessing module
Complete preprocessing module and create DataPreprocessor class

--- a/src/EDA_flights.ipynb
+++ b/src/EDA_flights.ipynb
@@ -1126,7 +1126,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "metadata": {
         "id": "p7Rqp5PPWTeY"
       },
@@ -1522,7 +1522,7 @@
       "source": [
         "semi_clean_df = df.drop(['CANCELLATION_REASON', 'AIR_SYSTEM_DELAY', 'SECURITY_DELAY', 'AIRLINE_DELAY', 'LATE_AIRCRAFT_DELAY', 'WEATHER_DELAY'], axis=1)\n",
         "semi_clean_df = semi_clean_df.drop(semi_clean_df.loc[(semi_clean_df['DIVERTED'] == 1) | (semi_clean_df['CANCELLED'] == 1)].index, axis=0)\n",
-        "semi_clean_df = semi_clean_df.drop(['YEAR', 'DIVERTED', 'CANCELLED'], axis=1)\n",
+        "semi_clean_df = semi_clean_df.drop(['YEAR', 'DIVERTED', 'CANCELLED', 'WHEELS_OFF', 'WHEELS_ON', 'DEPARTURE_TIME'], axis=1)\n",
         "semi_clean_df"
       ]
     },
